Refresh portfolio with premium visual redesign

--- a/index.html
+++ b/index.html
@@ -14,24 +14,32 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <header class="hero" id="top">
-      <div class="container">
-        <nav class="nav">
-          <a class="logo" href="#top">Mateenah Jahan</a>
-          <div class="nav-links">
-            <a href="#about">About</a>
-            <a href="#experience">Experience</a>
-            <a href="#education">Education</a>
-            <a href="#projects">Projects</a>
-            <a href="#github">GitHub</a>
-            <a href="#skills">Skills</a>
-            <a href="#certifications">Certifications</a>
-          </div>
-        </nav>
+      <div class="navbar-fixed">
+        <div class="container">
+          <nav class="nav">
+            <a class="logo" href="#top">Mateenah Jahan</a>
+            <div class="nav-links">
+              <a href="#about">About</a>
+              <a href="#experience">Experience</a>
+              <a href="#education">Education</a>
+              <a href="#projects">Projects</a>
+              <a href="#github">GitHub</a>
+              <a href="#skills">Skills</a>
+              <a href="#certifications">Certifications</a>
+            </div>
+          </nav>
+        </div>
+      </div>
 
+      <div class="container">
         <div class="hero-grid">
           <div class="hero-text">
             <p class="eyebrow">Research Trainee - CSIR-IGIB</p>
@@ -1782,7 +1790,7 @@
               </div>
             </article>
           </div>
-          <details class="cert-list" open>
+          <details class="cert-list">
             <summary>View all certifications</summary>
             <ul>
               <li>
