Improve accessibility with skip link and focus states

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <a class="skip-link" href="#main-content">Skip to main content</a>
     <header class="hero" id="top">
       <div class="navbar-fixed">
         <div class="container">
@@ -31,7 +32,9 @@
               <a href="#experience">Experience</a>
               <a href="#education">Education</a>
               <a href="#projects">Projects</a>
-              <a href="#github">GitHub</a>
+              <a href="#github" aria-label="Jump to GitHub projects section">
+                GitHub
+              </a>
               <a href="#skills">Skills</a>
               <a href="#certifications">Certifications</a>
             </div>
@@ -77,6 +80,7 @@
                 href="https://github.com/MateenahJAHAN"
                 target="_blank"
                 rel="noopener"
+                aria-label="Open Mateenah Jahan GitHub profile in a new tab"
               >
                 GitHub profile
               </a>
@@ -186,7 +190,7 @@
       </div>
     </header>
 
-    <main>
+    <main id="main-content">
       <section id="about" class="section">
         <div class="container">
           <div class="section-header">
@@ -1931,6 +1935,7 @@
                 href="https://github.com/MateenahJAHAN"
                 target="_blank"
                 rel="noopener"
+                aria-label="Open Mateenah Jahan GitHub profile in a new tab"
               >
                 GitHub: MateenahJAHAN
               </a>
