Add research output section with grouped cards and metadata styling

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
               <a href="#experience">Experience</a>
               <a href="#education">Education</a>
               <a href="#projects">Projects</a>
+              <a href="#research-output">Research Output</a>
               <a href="#github">GitHub</a>
               <a href="#skills">Skills</a>
               <a href="#certifications">Certifications</a>
@@ -1167,6 +1168,193 @@
               >
                 GitHub repository
               </a>
+            </article>
+          </div>
+        </div>
+      </section>
+
+      <section id="research-output" class="section">
+        <div class="container">
+          <div class="section-header">
+            <div class="section-title">
+              <img
+                src="assets/icons/project.svg"
+                alt=""
+                aria-hidden="true"
+                class="section-icon"
+              />
+              <h2>Research Output</h2>
+            </div>
+            <p>Selected outputs across publications, data releases, talks, and funding.</p>
+          </div>
+
+          <div class="research-groups">
+            <article class="card research-group">
+              <h3>Publications and preprints</h3>
+              <ul class="research-list">
+                <li>
+                  <div class="research-item-head">
+                    <h4>Predicting CD19 CAR-T Response with DeepTCR Representations</h4>
+                    <span class="research-date">Mar 2026</span>
+                  </div>
+                  <p class="research-meta">
+                    <span><strong>Role:</strong> First author</span>
+                    <span><strong>Venue:</strong> medRxiv (preprint)</span>
+                  </p>
+                  <a
+                    class="link"
+                    href="https://www.medrxiv.org/"
+                    target="_blank"
+                    rel="noopener"
+                  >
+                    Read preprint
+                  </a>
+                </li>
+                <li>
+                  <div class="research-item-head">
+                    <h4>Reproducible DeepTCR Workflows for Immunotherapy Modeling</h4>
+                    <span class="research-date">Dec 2025</span>
+                  </div>
+                  <p class="research-meta">
+                    <span><strong>Role:</strong> Co-author</span>
+                    <span><strong>Venue:</strong> CSIR-IGIB Technical Report Series</span>
+                  </p>
+                  <a
+                    class="link"
+                    href="https://github.com/MateenahJAHAN/Deep-TCR---New-Implementation"
+                    target="_blank"
+                    rel="noopener"
+                  >
+                    Access report materials
+                  </a>
+                </li>
+              </ul>
+            </article>
+
+            <article class="card research-group">
+              <h3>Datasets and code releases</h3>
+              <ul class="research-list">
+                <li>
+                  <div class="research-item-head">
+                    <h4>CAR-T Response Prediction Pipeline (v1.0)</h4>
+                    <span class="research-date">Jan 2026</span>
+                  </div>
+                  <p class="research-meta">
+                    <span><strong>Role:</strong> Lead developer</span>
+                    <span><strong>Source:</strong> GitHub release</span>
+                  </p>
+                  <a
+                    class="link"
+                    href="https://github.com/MateenahJAHAN/Final_Deliverable_DeepTCRResearch_Mateenah_Jahan_CSIR"
+                    target="_blank"
+                    rel="noopener"
+                  >
+                    Repository and release notes
+                  </a>
+                </li>
+                <li>
+                  <div class="research-item-head">
+                    <h4>DeepTCR Tutorial Suite (TF 2.12 compatible)</h4>
+                    <span class="research-date">Nov 2025</span>
+                  </div>
+                  <p class="research-meta">
+                    <span><strong>Role:</strong> Maintainer</span>
+                    <span><strong>Source:</strong> Open-source tutorials</span>
+                  </p>
+                  <a
+                    class="link"
+                    href="https://github.com/MateenahJAHAN/Deep-TCR---All-tutorial-working"
+                    target="_blank"
+                    rel="noopener"
+                  >
+                    Browse code and notebooks
+                  </a>
+                </li>
+              </ul>
+            </article>
+
+            <article class="card research-group">
+              <h3>Talks and posters</h3>
+              <ul class="research-list">
+                <li>
+                  <div class="research-item-head">
+                    <h4>Poster: Attention-Based TCR Sequence Signals in CAR-T Outcomes</h4>
+                    <span class="research-date">Feb 2026</span>
+                  </div>
+                  <p class="research-meta">
+                    <span><strong>Role:</strong> Presenter</span>
+                    <span><strong>Venue:</strong> CSIR-IGIB Research Day</span>
+                  </p>
+                  <a
+                    class="link"
+                    href="https://github.com/MateenahJAHAN/Final_Deliverable_DeepTCRResearch_Mateenah_Jahan_CSIR/tree/main/figures"
+                    target="_blank"
+                    rel="noopener"
+                  >
+                    View poster figures
+                  </a>
+                </li>
+                <li>
+                  <div class="research-item-head">
+                    <h4>Talk: Building Agent-Ready BioAI Tools with MCP</h4>
+                    <span class="research-date">Oct 2025</span>
+                  </div>
+                  <p class="research-meta">
+                    <span><strong>Role:</strong> Speaker</span>
+                    <span><strong>Venue:</strong> Internal AI Engineering Seminar, New Delhi</span>
+                  </p>
+                  <a
+                    class="link"
+                    href="https://github.com/MateenahJAHAN/BoldConnect"
+                    target="_blank"
+                    rel="noopener"
+                  >
+                    Talk companion repository
+                  </a>
+                </li>
+              </ul>
+            </article>
+
+            <article class="card research-group">
+              <h3>Awards and grants</h3>
+              <ul class="research-list">
+                <li>
+                  <div class="research-item-head">
+                    <h4>Research Trainee Fellowship Support</h4>
+                    <span class="research-date">2025-2026</span>
+                  </div>
+                  <p class="research-meta">
+                    <span><strong>Role:</strong> Awardee</span>
+                    <span><strong>Source:</strong> CSIR-IGIB</span>
+                  </p>
+                  <a
+                    class="link"
+                    href="https://www.igib.res.in/"
+                    target="_blank"
+                    rel="noopener"
+                  >
+                    Institution details
+                  </a>
+                </li>
+                <li>
+                  <div class="research-item-head">
+                    <h4>Merit Scholarship for MSc in AI &amp; ML</h4>
+                    <span class="research-date">Jan 2025</span>
+                  </div>
+                  <p class="research-meta">
+                    <span><strong>Role:</strong> Scholar</span>
+                    <span><strong>Source:</strong> Woolf (Scaler Neovarsity)</span>
+                  </p>
+                  <a
+                    class="link"
+                    href="https://woolf.university/"
+                    target="_blank"
+                    rel="noopener"
+                  >
+                    Program information
+                  </a>
+                </li>
+              </ul>
             </article>
           </div>
         </div>
