Improve hero identity and add corrected contact section

--- a/index.html
+++ b/index.html
@@ -14,47 +14,50 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles.css" />
+    <script src="main.js" defer></script>
   </head>
   <body>
     <header class="hero" id="top">
-      <div class="container">
-        <nav class="nav">
-          <a class="logo" href="#top">Mateenah Jahan</a>
-          <div class="nav-links">
-            <a href="#about">About</a>
-            <a href="#experience">Experience</a>
-            <a href="#education">Education</a>
-            <a href="#projects">Projects</a>
-            <a href="#github">GitHub</a>
-            <a href="#skills">Skills</a>
-            <a href="#certifications">Certifications</a>
-          </div>
-        </nav>
+      <div class="navbar-fixed">
+        <div class="container">
+          <nav class="nav">
+            <a class="logo" href="#top">Mateenah Jahan</a>
+            <div class="nav-links">
+              <a href="#about">About</a>
+              <a href="#experience">Experience</a>
+              <a href="#education">Education</a>
+              <a href="#projects">Projects</a>
+              <a href="#github">GitHub</a>
+              <a href="#skills">Skills</a>
+              <a href="#certifications">Certifications</a>
+              <a href="#contact">Contact</a>
+            </div>
+          </nav>
+        </div>
+      </div>
 
+      <div class="container">
         <div class="hero-grid">
           <div class="hero-text">
-            <p class="eyebrow">Research Trainee - CSIR-IGIB</p>
-            <h1>Scalable AI for Healthcare and Data Intelligence</h1>
+            <p class="eyebrow">AI Researcher | Data Scientist</p>
+            <h1>Mateenah Jahan</h1>
+            <h2 class="hero-subtitle">Building reliable AI for healthcare, genomics, and high-impact analytics.</h2>
             <p class="lead">
-              I am a Data Professional and Master's student in Computer Science
-              (AI &amp; ML) focused on the intersection of scalable AI and
-              healthcare. Currently, as a Research Trainee at CSIR-IGIB, I have
-              engineered reproducible DeepTCR pipelines and developed deep
-              learning models to predict CD19 CAR-T therapy responses for
-              B-cell lymphoma. Pushing the boundaries of medical technology, I
-              am actively building AI agents for healthcare and have implemented
-              the Model Context Protocol (MCP) to create more intelligent,
-              integrated data systems.
+              I build production-ready AI and analytics systems for healthcare.
+              At CSIR-IGIB, I design reproducible DeepTCR pipelines and train
+              deep learning models for CD19 CAR-T response prediction in
+              B-cell lymphoma.
             </p>
             <p class="lead">
-              With over two years of experience, I have optimized database
-              queries to cut reporting time by 40% and used data strategies to
-              increase marketing ROI by 30%. I am preparing for graduate studies
-              in the USA to further specialize in statistical modeling and big
-              data. My goal is to leverage these advanced tools to drive
-              meaningful change in public health, technology accessibility, and
-              computational biology.
+              Across 2+ years in data roles, I have improved reporting speed by
+              40% and increased marketing ROI by 30% through SQL, ETL, and
+              statistical analysis. I'm now focused on scaling reliable AI for
+              real-world clinical and public-health impact.
             </p>
             <div class="hero-tags">
               <span>Healthcare AI</span>
@@ -64,6 +67,7 @@
             </div>
             <div class="hero-actions">
               <a class="btn primary" href="#projects">View projects</a>
+              <a class="btn ghost" href="#contact">Contact</a>
               <a
                 class="btn ghost"
                 href="https://github.com/MateenahJAHAN"
@@ -192,19 +196,25 @@
               <h2>About</h2>
             </div>
             <p>
-              Scalable AI for healthcare, analytics engineering, and
-              data-driven strategy.
+              Applied AI research and analytics engineering for measurable
+              healthcare outcomes.
             </p>
           </div>
           <div class="about-grid">
             <div class="about-text">
+              <figure class="profile-card">
+                <img
+                  src="assets/illustrations/profile-placeholder.svg"
+                  alt="Portrait of Mateenah Jahan"
+                  class="profile-photo"
+                />
+                <figcaption>AI researcher focused on healthcare impact.</figcaption>
+              </figure>
               <p>
-                I work across machine learning, data analysis, and performance
-                marketing to deliver measurable outcomes. Recent work includes
-                reproducible DeepTCR pipelines, deep learning models for CAR-T
-                response prediction, and SQL and Python pipelines for customer
-                analytics. I focus on scalable, reliable systems that move from
-                research to real-world impact.
+                I combine machine learning research with analytics engineering
+                to ship systems that are reproducible, measurable, and useful.
+                My current work spans genomic modeling, AI workflows, and data
+                pipelines that move from experimentation to deployment.
               </p>
               <div class="about-tags">
                 <span>Precision medicine</span>
@@ -238,26 +248,22 @@
                 <h3>Academic record highlights</h3>
                 <ul class="icon-list">
                   <li>
-                    MSc Computer Science (AI and ML), Woolf - ECTS Accredited
-                    (EQF7), in progress, typical award date 15 Jul 2026.
+                    MSc Computer Science (AI &amp; ML), Woolf (ECTS / EQF7),
+                    expected completion: Jul 2026.
                   </li>
                   <li>
-                    Official transcript issued 07 Feb 2026 with cumulative GPA
-                    4.0 and 100% average.
+                    Current performance: cumulative GPA 4.0 with a 100% average
+                    on completed modules.
                   </li>
                   <li>
-                    Completed with 100%: Relational Databases, Introduction to
-                    Computer Programming (Parts 1 and 2), Data Visualisation
-                    Tools, Applied Statistics, Numerical Programming in Python,
-                    Statistical Programming, Product Analytics, High Dimensional
-                    Data Analysis.
+                    Completed modules (100%): Relational Databases, Applied
+                    Statistics, Python Programming, Statistical Programming,
+                    Product Analytics, and High-Dimensional Data Analysis.
                   </li>
                   <li>
-                    In progress: Foundations of ML, Introduction to ML,
-                    Introduction to Deep Learning, Advanced ML, Distributed ML,
-                    Mathematics for Computer Science, Design and Analysis of
-                    Algorithms, Productionization of ML Systems, Applied
-                    Computer Science Project.
+                    Ongoing modules: Foundations of ML, Deep Learning,
+                    Distributed ML, Algorithms, and ML Systems
+                    Productionization.
                   </li>
                 </ul>
               </div>
@@ -1739,6 +1745,40 @@
         </div>
       </section>
 
+      <section id="contact" class="section alt">
+        <div class="container">
+          <div class="section-header">
+            <div class="section-title">
+              <img
+                src="assets/icons/about.svg"
+                alt=""
+                aria-hidden="true"
+                class="section-icon"
+              />
+              <h2>Contact</h2>
+            </div>
+            <p>Open to research collaborations, internships, and AI/data science opportunities.</p>
+          </div>
+          <div class="contact-grid">
+            <article class="card contact-card">
+              <h3>Email</h3>
+              <p>Let's discuss ideas, opportunities, or collaborations.</p>
+              <a href="mailto:jahanmateenah55@gmail.com">jahanmateenah55@gmail.com</a>
+            </article>
+            <article class="card contact-card">
+              <h3>LinkedIn</h3>
+              <p>Connect with me professionally and follow my research journey.</p>
+              <a href="https://www.linkedin.com/in/mateenah-jahan/" target="_blank" rel="noopener">linkedin.com/in/mateenah-jahan</a>
+            </article>
+            <article class="card contact-card">
+              <h3>GitHub</h3>
+              <p>Explore my repositories and current data + AI projects.</p>
+              <a href="https://github.com/MateenahJAHAN" target="_blank" rel="noopener">github.com/MateenahJAHAN</a>
+            </article>
+          </div>
+        </div>
+      </section>
+
       <section id="certifications" class="section">
         <div class="container">
           <div class="section-header">
@@ -1782,7 +1822,7 @@
               </div>
             </article>
           </div>
-          <details class="cert-list" open>
+          <details class="cert-list">
             <summary>View all certifications</summary>
             <ul>
               <li>
@@ -1918,15 +1958,9 @@
         <div>
           <h4>Connect</h4>
           <ul>
-            <li>
-              <a
-                href="https://github.com/MateenahJAHAN"
-                target="_blank"
-                rel="noopener"
-              >
-                GitHub: MateenahJAHAN
-              </a>
-            </li>
+            <li><a href="mailto:jahanmateenah55@gmail.com">jahanmateenah55@gmail.com</a></li>
+            <li><a href="https://www.linkedin.com/in/mateenah-jahan/" target="_blank" rel="noopener">linkedin.com/in/mateenah-jahan</a></li>
+            <li><a href="https://github.com/MateenahJAHAN" target="_blank" rel="noopener">github.com/MateenahJAHAN</a></li>
           </ul>
         </div>
       </div>
