Add site favicon for browser tab branding

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Mateenah Jahan | Portfolio</title>
+    <link rel="icon" type="image/svg+xml" href="assets/favicon.svg" />
     <meta
       name="description"
       content="Portfolio of Mateenah Jahan - Research Trainee at CSIR-IGIB, AI/ML and data analytics."
@@ -72,6 +73,9 @@
             </div>
             <div class="hero-actions">
               <a class="btn primary" href="#projects">View projects</a>
+              <a class="btn ghost" href="mailto:jahanmateenah@gmail.com">
+                Contact
+              </a>
               <a
                 class="btn ghost"
                 href="https://github.com/MateenahJAHAN"
@@ -79,6 +83,22 @@
                 rel="noopener"
               >
                 GitHub profile
+              </a>
+              <a
+                class="btn ghost"
+                href="https://www.skills.google/public_profiles/91d4995d-0abf-4da5-b917-7ecef41b7705"
+                target="_blank"
+                rel="noopener"
+              >
+                Google Skills profile
+              </a>
+              <a
+                class="btn ghost"
+                href="https://www.datacamp.com/portfolio/jahanmateenah"
+                target="_blank"
+                rel="noopener"
+              >
+                DataCamp profile
               </a>
             </div>
             <div class="hero-metrics">
@@ -1678,8 +1698,39 @@
                 <span>TensorFlow</span>
                 <span>LLMs</span>
                 <span>Model Context Protocol (MCP)</span>
-                <span>Genomic analysis</span>
                 <span>AI prompting</span>
+              </div>
+            </div>
+            <div class="card skill-group">
+              <div class="skill-header">
+                <img src="assets/icons/ai.svg" alt="" aria-hidden="true" />
+                <h3>Generative AI tools and agent workflows</h3>
+              </div>
+              <div class="chips">
+                <span>Claude Code</span>
+                <span>OpenAI Codex</span>
+                <span>Cursor</span>
+                <span>OpenAI Agents SDK</span>
+                <span>Imagen</span>
+                <span>Replit</span>
+                <span>Lovable</span>
+                <span>Agentic harness design</span>
+                <span>AI workflow orchestration</span>
+                <span>Rapid AI prototyping</span>
+              </div>
+            </div>
+            <div class="card skill-group">
+              <div class="skill-header">
+                <img src="assets/icons/dna.svg" alt="" aria-hidden="true" />
+                <h3>Bioinformatics and genomics</h3>
+              </div>
+              <div class="chips">
+                <span>Genomic analysis</span>
+                <span>DeepTCR pipelines</span>
+                <span>CAR-T response modeling</span>
+                <span>Python for genomic data science</span>
+                <span>Genomic technologies</span>
+                <span>Reproducible research workflows</span>
               </div>
             </div>
             <div class="card skill-group">
@@ -1759,7 +1810,7 @@
               />
               <h2>Licenses and certifications</h2>
             </div>
-            <p>Selected professional credentials.</p>
+            <p>Selected professional credentials and profile links.</p>
           </div>
           <div class="cert-featured">
             <article class="card cert-card">
@@ -1790,6 +1841,24 @@
               </div>
             </article>
           </div>
+          <div class="hero-actions profile-links">
+            <a
+              class="btn ghost"
+              href="https://www.skills.google/public_profiles/91d4995d-0abf-4da5-b917-7ecef41b7705"
+              target="_blank"
+              rel="noopener"
+            >
+              Google Skills profile
+            </a>
+            <a
+              class="btn ghost"
+              href="https://www.datacamp.com/portfolio/jahanmateenah"
+              target="_blank"
+              rel="noopener"
+            >
+              DataCamp profile
+            </a>
+          </div>
           <details class="cert-list">
             <summary>View all certifications</summary>
             <ul>
@@ -1799,17 +1868,22 @@
               </li>
               <li>
                 Johns Hopkins University - Introduction to Genomic Technologies
-                (Dec 2024), Credential ID M1UE5J5UPSX4.
+                (Dec 2024), Credential ID M1UE5J5UPSX4, Verify:
+                https://www.coursera.org/account/accomplishments/verify/M1UE5J5UPSX4.
               </li>
               <li>
                 Johns Hopkins University - Python for Genomic Data Science (Jan
-                2025), Credential ID UKB2ZM302XD3.
+                2025), Credential ID UKB2ZM302XD3, Verify:
+                https://www.coursera.org/account/accomplishments/verify/UKB2ZM302XD3.
               </li>
               <li>
                 DataCamp - AI Fundamentals (Nov 2024), Credential ID
                 AIF0022660360033.
               </li>
-              <li>DataCamp - DataAnalyst (Oct 2024).</li>
+              <li>
+                DataCamp - DataAnalyst (Oct 2024), Skills: Statistical Data
+                Analysis and Python Data.
+              </li>
               <li>
                 Codecademy - Learn Python 3 Course (Sep 2024), Credential ID
                 66F55AD73F.
@@ -1833,20 +1907,20 @@
                 https://coursera.org/share/f054e3a4706cd9327a7c0539eeba761b.
               </li>
               <li>
-                Google - Introduction to Generative AI (Dec 2023), Credential ID
-                6553740.
+                Google - Introduction to Generative AI (Dec 2023), listed on
+                Google Skills profile.
               </li>
               <li>
                 Google - Introduction to Large Language Models (Dec 2023),
-                Credential ID 6555775.
+                listed on Google Skills profile.
               </li>
               <li>
-                Google - Generative AI Fundamentals (Dec 2023), Credential ID
-                6555992.
+                Google - Generative AI Fundamentals (Dec 2023), listed on
+                Google Skills profile.
               </li>
               <li>
                 Google Cloud Community India - Introduction to Responsible AI
-                (Dec 2023), Credential ID 6556196.
+                (Dec 2023), listed on Google Skills profile.
               </li>
               <li>Udacity - Google Sheets (Nov 2023).</li>
               <li>
@@ -1939,5 +2013,6 @@
         </div>
       </div>
     </footer>
+    <script src="nav-active.js" defer></script>
   </body>
 </html>
